k8s/stage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: stage
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
